<resources>
    <string name="app_name">VolunteerApp</string>

    <string name="sign_in_org">Organization Sign In</string>
    <string name="sign_in_vol">Volunteer Sign In</string>
    <string name="sign_in">Sign In</string>

    <string name="sign_up_org">Organization Sign Up</string>
    <string name="sign_up_vol">Volunteer Sign Up</string>
    <string name="sign_up">Sign Up</string>

    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="required">* required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
