<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/OrgSignInHeader"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/sign_in_org"
        android:gravity="center"
        android:textSize="16pt"
        android:layout_margin="16dp"
        />

    <EditText
        android:id="@+id/OrgEmailSignInField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:text=""
        android:layout_margin="16dp"
        />

    <EditText
        android:id="@+id/OrgPassSignInField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:text=""
        android:layout_margin="16dp"
        />

    <TextView
        android:id="@+id/required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/required"
        />

    <Button
        android:id="@+id/OrgSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_margin="16dp"
        android:gravity="center"
        />

</LinearLayout>


<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorGreen"
    tools:context=".organizationSignInPage">

    <fragment
        android:id="@+id/fragment"
        android:name="com.mrpanda2.volunteerapp.LoginFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_login" />
</androidx.constraintlayout.widget.ConstraintLayout>-->

